--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Londrina+Solid" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dosis|Londrina+Solid" rel="stylesheet"> 
 
 <body>
   <section id="sec1">
