Update description of organization

--- a/index.html
+++ b/index.html
@@ -49,19 +49,10 @@
         Sobre nós
       </h2>
       <p class="main">
-        Somos uma organização, formada por alguns alunos do Curso de Computação da UFPI. Entusiastas por JS, revoltados com o Curso e zueiros.
-        Fazemos alguns projetos apenas por aprendizado e diversão.
-        Usamos somente JavaScript <span class="heart">&hearts;</span>.
+        Somos uma organização formada por alguns entusiastas JS e zueiros.
+        Nós fazemos alguns projetos apenas para aprendizado e diversão. Nós só usamos JavaScript <span class="heart">♥</span>.
       </p>
-      <p class="whonext"> Em breve um possível curso com a Stack <span class="nmvr">NMVR</span> (já começamos com a burocracia)! </p>
-      <div id="stack">
-          <card name="Node.js" class="node" link="https://nodejs.org"> </card>
-          <card name="MongoDB" class="mongo" link="https://mongodb.com"> </card>
-          <card name="Vue.js" class="vue" link="https://vuejs.org"> </card>
-          <card name="Restify" class="restify" link="https://restify.com"> </card>
-        </div>
-      <p class="whonext"> E depois um site decente, ao nosso estilo! </p>
-      
+      <p class="whonext"> Em breve, projetos interessantes! </p>      
     </article>
   </section>
   <footer>
